integ-tests/tests/snapshots/parser__bad_underscores__double_leading.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unquoted-string]: 
  ┌─ double_leading:1:7
  │
1 │ foo = __0
  │       ^^^ string is not quoted


